# freetype-sample

./: .gitignore  .gitmodules  CMakeLists.txt  GLWindow.cpp  GLWindow.h  Log.h  Main.cpp  README.md  README.txt  TODO.md  TODO.txt  Time.h  main.cpp
android/: AndroidManifest.xml
android/res/values/: strings.xml
src/: Activity.cpp  Activity.h  AndroidStreamFactory.h  Application.cpp  Application.h  AssetStream.cpp  AssetStream.h  BufferObject.cpp  Cache.h  DesktopStreamFactory.h  Dimension.h  EGLWindow.cpp  EGLWindow.h  FTFont.cpp  FTFont.h  FTFontChar.cpp  FTFontChar.h  FileStream.cpp  FileStream.h  FontAtlas.cpp  FontAtlas.h  FontBatchRenderer.cpp  FontBatchRenderer.h  FontPrototype.cpp  FontPrototype.h  GLWindow.cpp  GLWindow.h  Game.cpp  Game.h  Log.cpp  Log.h  Main.cpp  OpenGL.cpp  OpenGL.h  Pool.h  ShaderObject.cpp  ShaderObject.h  ShaderProgram.h  StreamFactory.h  TreeNode.cpp  (+1 more)
src/core/: BufferObject.cpp  BufferObject.h  Dimension.h  Log.cpp  OpenGL.cpp  ShaderObject.cpp  ShaderObject.h  ShaderProgram.h  Stream.h  StreamFactory.h
src/core/android/: Activity.cpp  Activity.h  AndroidStreamFactory.h  AssetStream.h  EGLWindow.cpp  EGLWindow.h
src/core/desktop/: Application.cpp  Application.h  DesktopStreamFactory.h  FileStream.h  GLWindow.cpp  GLWindow.h
src/font/: BinPacker.cpp  BinPacker.h  FTFont.cpp  FTFont.h  FTFontChar.cpp  FTFontChar.h  FontAtlas.cpp  FontAtlas.h  FontBatchRenderer.cpp  FontBatchRenderer.h  FontGeometry.h  Pool.h  TreeNode.cpp  TreeNode.h  VertexTypes.h
